# cam2anki

./: .gitignore  Cargo.toml  README.md  study4.sqlite  update_terms_topics (1).sql
docs/: GUIDE_move_crawler_out_of_cam.md  TODO_parallel_crawl_import.md
src/: downloader.rs  input.rs  main.rs  models.rs  scraper.rs
src/anki/: anki_connect.rs  mod.rs  model.rs  util.rs
src/anki_connect/: model.rs  utils.rs
src/cam/: clawler.rs  crawler.rs  downloader.rs  mod.rs  scraper.rs  util.rs
src/cli/: mod.rs  prompt.rs  selector.rs
src/crawler/: crawler.rs  job.rs  mod.rs  pipeline.rs  runner.rs
src/study4/: db.rs  importer.rs  mod.rs
