[package]
name = "cambridge_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
reqwest = { version = "0.12.1", features = ["rustls-tls", "json"] }
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.18.4"
futures = "0.3"
urlencoding = "2.1"
dialoguer = "0.12.0"